Update university status

--- a/index.html
+++ b/index.html
@@ -62,11 +62,20 @@
               <div class="cv-entry">
                 <img class="cv-image" src="images/cv/aau.png">
                 <div class ="cv-text">
-                  <h3><b>Medialogy Bachelor’s Degree</b></h3>
-                  <p>2018 - Present <b>Aalborg university</b></p>
+                  <h3><b>Medialogy Master’s Degree</b></h3>
+                  <p>2021 - Present <b>Aalborg university</b></p>
                 </div>
               </div>
-              <p>Learning a combination of design and programming topics. We learned how to develop and interactive project from brainstorming to final evaluation of the prototype using user testing. </p>
+              <p>Continuing the Medialogy studies, deepening my knowledge in game and software development. </p>
+              
+              <div class="cv-entry">
+                <img class="cv-image" src="images/cv/aau.png">
+                <div class ="cv-text">
+                  <h3><b>Medialogy Bachelor’s Degree</b></h3>
+                  <p>2018 - 2021 <b>Aalborg university</b></p>
+                </div>
+              </div>
+              <p>Learning a combination of design and programming topics. We learned how to develop an interactive project from brainstorming to final evaluation of the prototype using user testing. </p>
               
               <div class="cv-entry">
                 <img class="cv-image" src="images/cv/ktu-ikona.png">
