--- a/index.html
+++ b/index.html
@@ -89,6 +89,54 @@
           </div>
 
           <div class="row">
+            <div class="column"> 
+              <h2>Tech stack</h2> 
+              <table>
+                <thead>
+                  <tr>
+                    <th>Languages</th>
+                    <th>Front-end</th>
+                    <th>Back-end</th>
+                    <th>Other</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>C#</td>
+                    <td>HTML</td>
+                    <td>Node.js</td>
+                    <td>Unity</td>
+                  </tr>
+                  <tr>
+                    <td>Java</td>
+                    <td>CSS</td>
+                    <td>MongoDB</td>
+                    <td>Selenium</td>
+                  </tr>
+                  <tr>
+                    <td>Python</td>
+                    <td>JavaScript</td>
+                    <td>SQL</td>
+                    <td>Bitbucket Pipelines</td>
+                  </tr>
+                  <tr>
+                    <td>Haxe</td>
+                    <td>Vue</td>
+                    <td></td>
+                    <td>Pandas</td>
+                  </tr>
+                  <tr>
+                    <td>Arduino</td>
+                    <td></td>
+                    <td></td>
+                    <td>Android</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+          <div class="row">
               <div class="column"> 
                 <h2>Languages</h2> 
                   <table>
