Add Temple of Boonil

--- a/index.html
+++ b/index.html
@@ -182,6 +182,37 @@
                     </table>
               </div>
           </div>
+          <div class="row">
+            <div class="column"> 
+              <h2>Featured Projects</h2>
+            </div>
+            <div class="column"> 
+              <div class="cv-entry">
+                <div class ="cv-text">
+                  <h3><b><a href= "projects/templeOfBoonil.html" target="_blank">Temple of Boonil</a></b></h3>
+                  <p>2021 - Present</p>
+                </div>
+              </div>
+              <p>First person puzzle game developed in Unity. I worked on detection of objects that are lit, physics interactions, UI and player movement.</p>
+              
+              <div class="cv-entry">
+                <div class ="cv-text">
+                  <h3><b><a href= "projects/dynamicDifficultyAdjustment.html" target="_blank">Ink Busters</a></b></h3>
+                  <p>2021</p>
+                </div>
+              </div>
+              <p>An online co-op FPS game developed in Unity for the Bachelor thesis. I worked on implementing the networking, data collection and core gameplay implementations.  </p>
+
+              <div class="cv-entry">
+                <div class ="cv-text">
+                  <h3><b><a href= "projects/sail.html" target="_blank">Sail!</a></b></h3>
+                  <p>2021</p>
+                </div>
+              </div>
+              <p>A rogue-like resource management game developed in Unity. I worked on the game design and programming. </p>
+
+            </div>
+          </div>
         </div>
     </section>
     <script src="includeHTML.js"></script>
