--- a/projects/sail.html
+++ b/projects/sail.html
@@ -46,6 +46,13 @@
                     alt="Image 2" />
                 <p>I worked on designing and programming the game systems, controlling the characters and implemented the water shader. </p>
             </div>
+            <div class="mibreit-imageElement" style="opacity:0">
+              <img src="/images/mibreitGallery/image-placeholder-transparent.png" 
+                  data-src="/images/projects/sail/selectSailors.png" 
+                  data-title="Image 3" 
+                  alt="Image 3" />
+              <p>I later came back to this project and added character trait randomization to add replayability. I also added simple modding support which allows players to add in their own traits into the game. </p>
+          </div>
             <script src="/initializeGallery.js"></script>
             </div>
           </div>
