Add invisible walls work experience

--- a/index.html
+++ b/index.html
@@ -28,13 +28,21 @@
             </div>
             <div class="column"> 
               <div class="cv-entry">
+                <img class="cv-image" src="images/cv/invisibleWalls.png">
+                <div class ="cv-text">
+                  <h3><b>Junior Programmer</b></h3>
+                  <p>2022 - Present <b>Invisible Walls</b></p>
+                </div>
+              </div>
+                <p>Working on a multiplayer first person game using the Unreal Engine.</p>
+              <div class="cv-entry">
                 <img class="cv-image" src="images/cv/laerdal-logo.jpg">
                 <div class ="cv-text">
                   <h3><b>Software Tester</b></h3>
-                  <p>2019 - Present <b>Lærdal</b></p>
+                  <p>2019 - 2022 <b>Lærdal</b></p>
                 </div>
               </div>
-                <p>Test automation and manual testing of software solutions. Accessibility testing to comply with WCAG 2.1. Working together with other testers to plan the testing process. </p>
+                <p>Test automation and manual testing of software solutions. Accessibility testing to comply with WCAG 2.1. Working together with other testers to plan the testing process. Spent time doing VR development in the last couple months of working here.</p>
               <div class="cv-entry">
                 <img class="cv-image" src="images/cv/EDUGAIM.png">
                 <div class ="cv-text">
