Update Temple of Starlight name mentions

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div class="column"> 
               <div class="cv-entry">
                 <div class ="cv-text">
-                  <h3><b><a href= "projects/templeOfBoonil.html" target="_blank">Temple of Boonil</a></b></h3>
+                  <h3><b><a href= "projects/templeOfBoonil.html" target="_blank">Temple of Starlight</a></b></h3>
                   <p>2021 - Present</p>
                 </div>
               </div>
