--- a/projects/templeOfBoonil.html
+++ b/projects/templeOfBoonil.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Simonas Čeponis Temple Of Boonil</title>
+    <title>Simonas Čeponis Temple Of Starlight</title>
     <meta name="Simonas Čeponis portfolio">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
@@ -21,7 +21,7 @@
       <div class="row">
           <div class="column">
             <h2>First person puzzle game (WIP)</h2>
-            <p> The development of Temple of Boonil started as a university project, but is now being developed further with a planned release on Steam. 
+            <p> The development of Temple of Starlight started as a university project, but is now being developed further with a planned release on Steam. 
                 For this project, I am acting as team lead doing both programming and game design work. 
             </p>
             <p><b>Technologies used: </b>Unity, C#.</p>
