--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
               <div class="cv-entry">
                 <img class="cv-image" src="images/cv/invisibleWalls.png">
                 <div class ="cv-text">
-                  <h3><b>Junior Programmer</b></h3>
+                  <h3><b>Gameplay Programmer</b></h3>
                   <p>2022 - Present <b>Invisible Walls</b></p>
                 </div>
               </div>
-                <p>Working on a multiplayer first person game using the Unreal Engine.</p>
+                <p>Working on a multiplayer first person game using the Unreal Engine. Focusing on implementing gameplay, input and accessibility. </p>
               <div class="cv-entry">
                 <img class="cv-image" src="images/cv/laerdal-logo.jpg">
                 <div class ="cv-text">
@@ -71,10 +71,10 @@
                 <img class="cv-image" src="images/cv/aau.png">
                 <div class ="cv-text">
                   <h3><b>Medialogy Master’s Degree</b></h3>
-                  <p>2021 - Present <b>Aalborg university</b></p>
+                  <p>2021 - 2023 <b>Aalborg university</b></p>
                 </div>
               </div>
-              <p>Continuing the Medialogy studies, deepening my knowledge in game and software development. </p>
+              <p>Deepening my knowledge in game and software development. </p>
               
               <div class="cv-entry">
                 <img class="cv-image" src="images/cv/aau.png">
@@ -116,7 +116,7 @@
                     <td>Unity</td>
                   </tr>
                   <tr>
-                    <td>Java</td>
+                    <td>C++</td>
                     <td>CSS</td>
                     <td>MongoDB</td>
                     <td>Selenium</td>
@@ -134,7 +134,7 @@
                     <td>Pandas</td>
                   </tr>
                   <tr>
-                    <td>Arduino</td>
+                    <td>Java</td>
                     <td></td>
                     <td></td>
                     <td>Android</td>
@@ -184,7 +184,7 @@
                           <td>A1</td>
                           <td>A1</td>
                           <td>B1</td>
-                          <td>A1</td>
+                          <td>A2</td>
                         </tr>
                       </tbody>
                     </table>
@@ -198,10 +198,10 @@
               <div class="cv-entry">
                 <div class ="cv-text">
                   <h3><b><a href= "projects/templeOfBoonil.html" target="_blank">Temple of Starlight</a></b></h3>
-                  <p>2021 - Present</p>
+                  <p>2021 - 2023</p>
                 </div>
               </div>
-              <p>First person puzzle game developed in Unity. I worked on detection of objects that are lit, physics interactions, UI and player movement.</p>
+              <p>First person puzzle game developed in Unity. I worked on detection of objects that are lit, physics interactions, UI and player movement. I was also responsible for DevOps.</p>
               
               <div class="cv-entry">
                 <div class ="cv-text">
