--- a/navigation.html
+++ b/navigation.html
@@ -5,10 +5,13 @@
           </a>
           <ul class="navigation-list float-right">
             <li class="navigation-item">
-              <a class="navigation-link" href="/index.html">About me</a>
+              <a class="navigation-link" href="/index.html">About</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="/projects.html">My projects</a>
+              <a class="navigation-link" href="/projects.html">Projects</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="/Blog.html">Blog</a>
             </li>
             <li class="navigation-item">
               <a class="logo-github" href="https://github.com/latedude2"> <img alt="GitHub" src="/images/cv/GitHub-Mark-64px.png" width=32" height="32"></a>
