Remove visual studio as a requirement and explain the choice of VSCode.

--- a/blogs/UnityEnvironmentSetup.html
+++ b/blogs/UnityEnvironmentSetup.html
@@ -1,5 +1,5 @@
 <head>
-    <title>Simonas Čeponis Bachelor Project</title>
+    <title>Unity Dev Environment Setup Guide</title>
     <meta name="Simonas Čeponis portfolio">
     <!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
@@ -38,8 +38,7 @@
                     <a href= https://community.atlassian.com/t5/Sourcetree-questions/I-always-get-a-popup-credential-helper-selector-asking-me-to/qaq-p/1465880 target="_blank">https://community.atlassian.com/t5/Sourcetree-questions/I-always-get-a-popup-credential-helper-selector-asking-me-to/qaq-p/1465880</a></li>
                 <li>Install Unity hub</li>
                 <li>Install Unity version according to the project you are working on. A good way to do this is to try to open a cloned Unity project. Unity hub should then prompt you to install the correct Unity version for that project. </li>
-                <li>When installing, you will also install Visual Studio Community (even if not writing code, we need it to make Unity work AFAIK). When doing so, make sure to select Game Development with Unity when prompted. <img src="/images/blogs/UnityEnvironmentSetup/CommunityPrompt.png"> </li>
-                <li>No need to sign in when prompted here: <img src="/images/blogs/UnityEnvironmentSetup/CommunityPrompt2.png"> </li>
+                <li>No need to install Visual Studio when prompted, we will install VS Code later instead. Unlike Visual Studio, VSCode is completely free to use. Of course, you can use Visual Studio instead if you prefer. </li>
                 <li>Setup unity smart merge to merge prefab and scene files automatically (it only takes 5 minutes!): <a href= https://docs.unity3d.com/Manual/SmartMerge.html target="_blank">https://docs.unity3d.com/Manual/SmartMerge.html</a></li>
                 <li>Install VS Code (if you dont write any code at all you can skip VS code setup). This is a nice video which takes you through the next few steps: <a href= "https://www.youtube.com/watch?v=ihVAKiJdd40" target="_blank">https://www.youtube.com/watch?v=ihVAKiJdd40</a></li>
                     I also found this video for MAC (not tested at all though): <a href="https://www.youtube.com/watch?v=3GVGyooZ8jk" target="_blank">https://www.youtube.com/watch?v=3GVGyooZ8jk</a>
