update intro page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="main"> 
           <div class="row">
             <div class="column"> 
-              <p style="padding-top:100px;" >Welcome to my website! I am Simonas Čeponis, a student software tester and aspiring software developer and I invite you to take a look around and learn more about me, my experiences and projects :)  </p>
+              <p style="padding-top:100px;" >I am Simonas Čeponis, a gameplay programmer at Invisible Walls and co-founder of Enlit Games. I invite you to take a look around and learn more about me, my experiences and projects :)  </p>
             </div>
             <div class="column"> 
               <img height="300" src="images/cv/Portretas.jpg">
